# UnB-FinalProject-DnsOverBitcoin

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  report.md
blockchain_scanner/: .env.example  Cargo.toml  diesel.toml
blockchain_scanner/migrations/2025-03-04-231331_create_dns_mapping/: down.sql  up.sql
blockchain_scanner/src/: main.rs  model.rs  schema.rs
data/zone-files/: ord.zone
dns-wallet/: .env.example  Cargo.toml  README.md
dns-wallet/src/: main.rs
dns_nostr_server/: Cargo.toml
dns_nostr_server/src/: dns_nostr_token.rs  dns_nostr_token_repository.rs  lib.rs  main.rs  name_token.rs  name_token_repository.rs  nostr_authority.rs  nostr_events_repository.rs
nostr-relay/: config.toml
regtest_node/: Dockerfile  bitcoin.conf  entry_point.sh
src/: main.rs  nostr_authority.rs  ord_authority.rs
src/dns/: mod.rs
src/dns/core/: class.rs  data.rs  label.rs  message.rs  mod.rs  name.rs  query_class.rs  query_type.rs  question.rs  record.rs  record_type.rs  zone_file.rs
src/dns/core/data/: a_data.rs  aaaa_data.rs  cname_data.rs  mx_data.rs  ns_data.rs  txt_data.rs
src/dns/handler/: empty_handler.rs  handler.rs  mod.rs
src/dns/net/: message.rs  mod.rs  udp_listener.rs
src/dns/net/udp/: datagram_reader_writer.rs  mod.rs  udp_listener.rs  udp_stub_resolver.rs
src/dns/net/udp_listener/: datagram_reader_writer.rs  message_buffer.rs
src/dns/resolver/: empty_resolver.rs  in_memory_authority.rs  mod.rs  resolver.rs
