[package]
name = "blockchain_scanner"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
dotenv = "0.15.0"
diesel = { version = "2.2.8", features = ["sqlite"] }
