[package]
name = "dns_nostr_server"
version = "0.0.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "dns_nostr_server"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.83"
bitcoin = "0.32.6"
bitcoincore-rpc = "0.19.0"
hickory-server = "0.24.2"
nostr-sdk = "0.41.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.39.3", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "fs",
] }
